# pdfParser

./: .gitignore  README.md  gInvoiceParser.icns  gInvoiceParser.spec  pyproject.toml  requirements.txt
gInvoiceParser/: __init__.py  __main__.py  gui.py  parser.py  update.py
gInvoiceParser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gInvoiceParser/extractor/: cm360.py  dv360.py  google_ads.py  google_workspace.py  linkedin.py  main.py  sa360.py
