[project]
name = "gInvoiceParser"
version = "0.1.0"
description = "A Tkinter-based tool for extracting structured invoice data from PDF files."
authors = [{ name = "Ryan McCulloch", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pdfplumber",
    "pandas",
    "openpyxl",
    "tk", 
    "requests"
]

[project.scripts]
gInvoiceParser = "gInvoiceParser.gui:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

